--- a/greeter.yml
+++ b/greeter.yml
@@ -1,1 +1,1 @@
-message: "Hello Spring Cloud Config! Modified by Fahim"
+message: "Hello Spring Cloud Config! Modified by Fahim another time without restart"
